more tables vignette

--- a/vignettes/geometry-tables.Rmd
+++ b/vignettes/geometry-tables.Rmd
@@ -17,7 +17,7 @@ vignette: >
 
 This package is a response to some missing use-cases in GIS (geographic information systems) using R. It is an attempt to provide a unified framework for doing the things that GIS traditionally cannot do without awkward workarounds. 
 
-With some reservation, I call this the **gris model**. 
+With some reservation, I call this the **gris model**, and it's being used in the rangl package and in the rbgm package. 
 
 The model provides: 
 
@@ -263,6 +263,7 @@ This is not done with a single object with a special class, but it could be. See
 document on an S3 class for fortified, single-nested, and double-nested forms. 
 
 
+## Tables are systematic by default
 
 Perhaps the best thing about having everything stored in two tables is that we can push it out to a database, pass that to someone else and everything is transferred correctly. 
 
@@ -333,25 +334,44 @@ How do we remove this redundancy?
 * Create "tidy(-ish)" tables using nesting, there are at least three ways to do this (gggeom, single, double nesting)
 * Create normalized tables and put like with like. 
 
-TABLES
+## Normal form by stages
 
+Storing data in tables without unnessary redundancy is called "normal form". This goes a step further from the basics of tidy data being rows of observations with all columns as variables. 
 
-First identify the entities that exist. 
+To convert spatial vector data to normal form we need the to first identify the entities that exist. These are
 
-Objects, parts, coordinates. 
+* Objects - a.k.a. Features, or specifically polygons, lines, points, multipoints
+* Branches - a.k.a. Parts, or Pieces, specifically individual closed linepaths, line strings, individual coordinates
+* Vertices - a.k.a. coordinates. 
 
+If we create a "Branches" table by normalizing from the geometry table, we will have three tables, one with all the x/y coordinates and their part ID and order within part, the parts table with attributes part ID, island status, and the object metadata table. 
 
-If we create a "parts" table, we will have three tables, one with all the x/y coordinates and their part ID and order within part, the parts table with attributes part ID, island status, and the object metadata table. 
-
-Benefit is size of data is reduced. 
+A benefit here is that the size of data may be reduced, though it depends on how much data we have versus the number of IDs we need to link the tables. 
 
 ## Four tables
 
-Further normalization inserts a partXcoord table, and puts the order and vertex id on this. 
-Benefit is 
+Further normalization inserts a **link** table between branches and vertices, and puts the order and vertex id on this. This table should be thought of as the "instances of vertices", since this is where we explicitly store the use of an indvidual vertex by a branch. We don't need to store the same vertex again and again, just a link to it. This makes it easier to identify which coordinates are shared. 
 
-- further data reduction 
-- removal of duplicated coordinates
-- ability to demand page
-- ready for topology
+Other benefits include
+
+* further data reduction 
+* removal of duplicated coordinates
+* ability to read/query arbitrary elements 
+
+Note that the vertex table by default will be de-duplicated on X and Y, so we can store another pair of these transformed e.g. Longitude and Latitude, but the de-duplication process would be different if performed on three coordinates, or four. By default for now we only discuss doing this on X and Y (which may be Longitude and Latitude), because this is what gives us topology for the most common 2D case, and is absolutely required by the triangulation process in `RTriangle`. 
+
+
+Let's send a **normal form** copy of the maps "county" data set  in a 'SQLite' database. 
+
+
+
+```{r,eval=FALSE}
+library(dplyr)
+library(tibble)
+library(maps)
+library(ggplot2)
+db <- src_sqlite("data-raw/maps_county_nf.sqlite3", create = TRUE)
+mp <- map("county", plot = FALSE, fill = TRUE)
+
+```
 
