--- a/vignettes/spbabel.Rmd
+++ b/vignettes/spbabel.Rmd
@@ -45,7 +45,7 @@ The two-table version is similar to that implemented in:
 * ggplot2's `fortify()`
 * gris' normalized tables
  
-The four-table form is in development across a number of projects. It is straightforward to work with but there aren't any high-level tools in package form yet. 
+The four-table form is in development across a number of projects. It is straightforward to work with but there aren't any high-level tools in package form yet.  (Though [rbgm](http://australianantarcticdivision.github.io/rbgm/) is probably the most advanced, it uses an early form that was absolutely necessary to read everything in those files before the more general approach here). 
 
 # How do the 'sptable()' and 'sp()' functions work
 
