--- a/README.Rmd
+++ b/README.Rmd
@@ -27,33 +27,36 @@ knitr::opts_chunk$set(
 
 [![Coverage Status](https://img.shields.io/codecov/c/github/mdsumner/spbabel/master.svg)](https://codecov.io/github/mdsumner/spbabel?branch=master)
 
-# spbabel: a tidy view of Spatial
+# spbabel: spatial translator
 
-Spbabel provides simple tools to flip between Spatial and tidy forms of data. This package aims assist in the ongoing development of tools for spatial data in R. There is limited use for users directly, though see examples in the vignettes. 
+Spbabel provides simple tools to flip between Spatial and tidy forms of data. This package aims assist in the ongoing development of tools for spatial data in R. There is limited use for users directly, though see examples in the vignettes. It's pretty chaotic, but there is a 
 
 This framework allows for the easy transfer between the different spatial representations in R, in generic database-ready tables that can be transferred from and to R in many different ways. 
 
 Currently supported are
 
+* sf
 * sp 
 * ggplot2
-* gris 
+* rangl
+* trip
+* rgl
 
 In progress are
 
 * graphics
-* rgl
 * maps
 * spatstat
-* sf
-* trip
 
 Planned are
 
 * PBSmapping
 * lawn
+* igraph
+* everything else
+* the other trajectory / animal tracking packages
 
-* the trajectory / animal tracking packages, such as adehabitatLT, trajectories, and dozens of others
+The tracking packages such as adehabitatLT, trajectories, and dozens of others
 `crawl` and `move` packages contain objects that  could be coerced in a straightforward way, see the Spatio Temporal Task View for more (in the Moving Objects / Trajectories section). The hyperframe in spatstat is another example, and to follow up Edzer's work in spacetime. 
 
 If you know of other variants that should be included, please file an issue or let me know.  Once the basic framework is available, adding new conversions will be pretty simple. 
