various fixes, mostly map_table

--- a/vignettes/sfbabel.Rmd
+++ b/vignettes/sfbabel.Rmd
@@ -54,8 +54,8 @@ print(report)
 ## What is the structure of this object
 
 ```{r}
-library(spbabel)
-map_table(report, v_atts = c("x_", "y_", "z_"))
+#library(spbabel)
+#map_table(report, v_atts = c("x_", "y_", "z_"))
 
 
 ```
