--- a/vignettes/sfbabel.Rmd
+++ b/vignettes/sfbabel.Rmd
@@ -2,7 +2,10 @@
 title: "Speaking Simple Features"
 author: "Michael Sumner"
 date: "`r Sys.Date()`"
-output: rmarkdown::html_vignette
+output:
+  rmarkdown::html_vignette:
+    fig_width: 7
+    fig_height: 7
 vignette: >
   %\VignetteIndexEntry{Speaking simple features}
   %\VignetteEngine{knitr::rmarkdown}
@@ -41,7 +44,7 @@ lines(xy_traverse[, 1:2])
 plot(zz, type = "l")
 ```
 
-Having done all of this work, it's nice to write a nice compact report. 
+Having done all of this work, we write a nice compact report. 
 
 ```{r}
 library(sf)
@@ -51,11 +54,13 @@ plot(report)
 print(report)
 ```
 
-## What is the structure of this object
+## What is the relational structure of this object?
+
+TBD
 
 ```{r}
-#library(spbabel)
-#map_table(report, v_atts = c("x_", "y_", "z_"))
+library(spbabel)
+map_table(report, v_atts = c("x_", "y_", "z_"))
 
 
 ```
